...
    <string name="button_login_sign_in_with_google">Meld aan met Google</string>
    <string name="message_welcome">Welkom, %1$s!</string>
    <string name="placeholder_email">E-mailadres</string>
    <string name="placeholder_password">Wachtwoord</string>
    <string name="description_app_logo">Logo of Technology Salesmen Toolkit</string>
    <string name="error_email_is_not_verified">Gelieve uw e-mailadres te bevestigen aan de hand van de verzonden e-mail.</string>
    <string name="error_empty_fields">"Gelieve alle velden in te vullen."</string>

    <!-- RegistrationFragment -->
    <string name="button_registration_create_account">Maak account aan</string>
    <string name="placeholder_firstname">Voornaam</string>
    <string name="placeholder_lastname">Familienaam</string>
    <string name="placeholder_repeatpassword">Herhaal wachtwoord</string>
    <string name="message_account_created">Uw account werd succesvol aangemaakt!</string>
    <string name="error_account_not_created">Er is iets fout gelopen tijdens het aanmaken van uw account. Gelieve het opnieuw te proberen.</string>
    <string name="error_invalid_email">Gelieve een geldig e-mailadres in te voeren.</string>
    <string name="error_invalid_password">Gelieve een wachtwoord van meer dan 6 karakters in te voeren.</string>
    <string name="error_passwords_dont_match">De twee ingevoerde wachtwoorden komen niet overeen.</string>

    <!-- ServiceListFragment -->
    <string name="search_hint">Zoek hier…</string>
    <string name="title_action_filter_everything">Toon alles</string>
    <string name="title_action_filter_windows">Filter op Windows</string>
    <string name="title_action_filter_android">Filter op Android</string>
...
    <string name="title_change_email">"E-mailadres wijzigen"</string>
    <string name="message_change_email">Uw e-mailadres werd succesvol gewijzigd.</string>
    <string name="error_change_email">Er is een fout opgetreden tijdens het wijzigen van uw e-mailadres.</string>

    <!-- Utils -->
    <string name="error_no_browser_detected">Er werd geen webbrowser gedetecteerd op uw toestel.</string>
    <string name="title_privacy_policy_dialog">Privacybeleid</string>
    <string name="message_privacy_policy_dialog">Door op \'Ja\' te drukken, gaat u akkoord met het privacybeleid en zal uw account aangemaakt worden. Er zal een bevestigingsmail naar uw e-mailadres verzonden worden.</string>
    <string name="description_service_instruction_image">Afbeelding van de huidige instructie</string>

    <!-- Labels -->
    <string name="label_change_password">Wachtwoord wijzigen? Klik hier!</string>
    <string name="label_copyright">Copyright © 2018 | Bram De Coninck</string>
    <string name="label_go_to_sign_in">Heb je al een account? Klik hier!</string>
    <string name="label_go_to_registration">Heb je nog geen account? Klik hier!</string>

    <!-- Dialogs -->
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nee</string>
    <string name="dialog_cancel">Annuleren</string>
    <string name="dialog_okay">Oké</string>
    <string name="dialog_send">Verzend</string>
    <string name="dialog_privacy_policy">Bekijk privacybeleid</string>

</resources>

