<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>

        <variable
            name="registrationViewModel"
            type="com.bramdeconinck.technologysalesmantoolkit.viewmodels.RegistrationViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:theme="@style/PrimaryBackground"
        tools:context=".fragments.RegistrationFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <android.support.constraint.Guideline
                    android:id="@+id/gl_registration_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.11"/>

                <android.support.constraint.Guideline
                    android:id="@+id/gl_registration_89"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.89"/>

                <ImageView
                    android:id="@+id/iv_registration_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/description_app_logo"
                    app:layout_constraintEnd_toEndOf="@+id/gl_registration_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_registration_11"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/tv_registration_appName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/gl_registration_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_registration_11"
                    app:layout_constraintTop_toBottomOf="@+id/iv_registration_logo" />

                <EditText
                    android:id="@+id/et_registration_firstname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:ems="10"
                    android:hint="@string/placeholder_firstname"
                    android:textColorHint="@color/colorHintText"
                    android:inputType="textPersonName"
                    android:paddingEnd="20dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorFormFieldText"
                    android:text="@={registrationViewModel.firstname}"
                    android:background="@drawable/form_field_rounded_background"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="12dp"
                    android:drawableStart="@drawable/ic_account_circle_gray_24dp"
                    android:drawablePadding="6dp"
                    app:layout_constraintEnd_toEndOf="@+id/gl_registration_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_registration_11"
                    app:layout_constraintTop_toBottomOf="@+id/tv_registration_appName"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/et_registration_familyname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/placeholder_lastname"
                    android:textColorHint="@color/colorHintText"
                    android:inputType="textPersonName"
                    android:paddingEnd="20dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorFormFieldText"
                    android:text="@={registrationViewModel.familyname}"
                    android:background="@drawable/form_field_rounded_background"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="12dp"
                    android:drawableStart="@drawable/ic_people_gray_24dp"
                    android:drawablePadding="6dp"
                    app:layout_constraintEnd_toEndOf="@+id/gl_registration_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_registration_11"
                    app:layout_constraintTop_toBottomOf="@+id/et_registration_firstname"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/et_registration_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/placeholder_email"
                    android:textColorHint="@color/colorHintText"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="20dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorFormFieldText"
                    android:text="@={registrationViewModel.email}"
                    android:background="@drawable/form_field_rounded_background"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="12dp"
                    android:drawableStart="@drawable/ic_email_gray_24dp"
                    android:drawablePadding="6dp"
                    app:layout_constraintEnd_toEndOf="@+id/gl_registration_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_registration_11"
                    app:layout_constraintTop_toBottomOf="@+id/et_registration_familyname"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/et_registration_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/placeholder_password"
                    android:textColorHint="@color/colorHintText"
                    android:inputType="textPassword"
                    android:paddingEnd="20dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorFormFieldText"
                    android:text="@={registrationViewModel.password}"
                    android:background="@drawable/form_field_rounded_background"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="12dp"
                    android:drawableStart="@drawable/ic_password_gray_24dp"
                    android:drawablePadding="6dp"
                    app:layout_constraintEnd_toEndOf="@+id/gl_registration_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_registration_11"
                    app:layout_constraintTop_toBottomOf="@+id/et_registration_email"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/et_registration_repeatPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/placeholder_repeatpassword"
                    android:textColorHint="@color/colorHintText"
                    android:inputType="textPassword"
                    android:paddingEnd="20dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorFormFieldText"
                    android:text="@={registrationViewModel.repeatPassword}"
                    android:background="@drawable/form_field_rounded_background"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="12dp"
                    android:drawableStart="@drawable/ic_password_gray_24dp"
                    android:drawablePadding="6dp"
                    app:layout_constraintEnd_toEndOf="@+id/gl_registration_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_registration_11"
                    app:layout_constraintTop_toBottomOf="@+id/et_registration_password"
                    tools:ignore="Autofill" />

                <Button
                    android:id="@+id/btn_registration_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/button_registration_create_account"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:background="@drawable/form_button_rounded_background"
                    android:onClick="@{() -> registrationViewModel.isRegistrationFormValid()}"
                    app:layout_constraintBottom_toTopOf="@+id/tv_registration_backToLogin"
                    app:layout_constraintEnd_toEndOf="@+id/gl_registration_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_registration_11"
                    app:layout_constraintTop_toBottomOf="@+id/et_registration_repeatPassword" />

                <TextView
                    android:id="@+id/tv_registration_backToLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="@{() -> registrationViewModel.goToLogin()}"
                    android:text="@string/label_go_to_sign_in"
                    android:textColor="@color/colorClickableLabel"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/gl_registration_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_registration_11" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </FrameLayout>

</layout>